--- a/src/app/signup-form/signup-form.component.html
+++ b/src/app/signup-form/signup-form.component.html
@@ -8,7 +8,7 @@
         <p *ngIf="!firstName.valid && firstName.touched" class='form-text small text-muted'>First name is invalid</p>
       </div>
       <div class='form-group col-sm-6'>
-        <label class='form-label' for='phone'>Phone Number</label>
+        <label class='form-label' for='phone'>Last Name</label>
         <input type='text' class='form-control' id='lastName' required ngModel name='lastName' #lastName="ngModel" />
         <p *ngIf="!lastName.valid && lastName.touched" class='form-text small text-muted'>Last name number is invalid</p>
       </div>
@@ -49,7 +49,7 @@
         <button (click)="onReset()" type='button' class='btn btn-secondary'>Reset</button>
       </div>
       <div class='form-action col-sm-6'>
-        <button type='submit' class='btn btn-primary float-end'>Submit</button>
+        <button type='submit' class='btn btn-primary float-end' [disabled]="!f.valid">Submit</button>
       </div>
     </div>
   </form>
